--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -5,10 +5,8 @@ services:
     image: postgres:16
     container_name: fleetflow_db
     restart: always
-    environment:
-      POSTGRES_USER: fleet
-      POSTGRES_PASSWORD: fleetpass
-      POSTGRES_DB: fleetflow
+    env_file:
+      - ./db.env
     ports:
       - "5432:5432"
     volumes:
