--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,16 +5,22 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon --watch src --exec node src/index.js",
-    "db:seed": "node scripts/seed.js"
+    "db:seed": "node scripts/seed.js",
+    "test": "mocha --exit"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.18.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.14"
+    "chai": "^4.3.7",
+    "mocha": "^11.7.5",
+    "nodemon": "^3.1.14",
+    "supertest": "^6.3.3"
   }
 }
