--- a/Backend/db.env
+++ b/Backend/db.env
@@ -1,3 +1,7 @@
+POSTGRES_USER=fleet
+POSTGRES_PASSWORD=fleetpass
+POSTGRES_DB=fleetflow
+
 # Backend runtime environment variables
 # Copy to `.env` and update values for your environment. This file is gitignored.
 
@@ -5,11 +9,11 @@
 PORT=3001
 
 # JWT secret used to sign tokens
-JWT_SECRET=change_me_in_production
+JWT_SECRET=fleetflow_dev_jwt_secret_please_change
 
 # Postgres connection (used by app if provided)
-# Example: postgres://user:password@host:5432/dbname
-DATABASE_URL=
+# Example: postgres://fleet:fleetpass@localhost:5432/fleetflow
+DATABASE_URL=postgres://fleet:fleetpass@localhost:5432/fleetflow
 
 # Or individual PG_* variables (used by scripts)
 PGHOST=localhost
