--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon --watch src --exec node src/index.js",
-    "db:seed": "node scripts/seed.js",
+    "initiate": "node scripts/initiate.js",
     "test": "mocha --exit"
   },
   "dependencies": {
